[project]
name = "c2tm"
version = "0.0.1"
description = "A contrastive variational autoencoder model for contextualized topic modeling."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name="Alex Lehmann", email="alexlehmann@cmail.carleton.ca"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/Alex-Lehmann/C2TM"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
